# chess

./: .gitignore  CMakeLists.txt
headers/: Bitboard.h  BitboardUtils.h  bitboard.h  bitboardUtils.h  bitboard_utils.h  board.h  move_gen.h
src/: Bitboard.cpp  BitboardUtils.cpp  bitboard.cpp  bitboardUtils.cpp  bitboard_utils.cpp  board.cpp  main.cpp  move_gen.cpp
